--- a/test-output/extent-report.html
+++ b/test-output/extent-report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 10, 2024 10:34:34 pm</span></a>
+<a href="#"><span class="badge badge-primary">Dec 14, 2024 02:54:03 am</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">testAccountLogin</p>
             <p class="text-sm">
-              <span>22:34:36</span> / <span>00:00:05:433</span>
+              <span>02:54:05</span> / <span>00:00:04:637</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testAccountLogin</h5>
-<span class='badge badge-success'>12.10.2024 22:34:36</span>
-<span class='badge badge-danger'>12.10.2024 22:34:41</span>
-<span class='badge badge-default'>00:00:05:433</span>
+<span class='badge badge-success'>12.14.2024 02:54:05</span>
+<span class='badge badge-danger'>12.14.2024 02:54:09</span>
+<span class='badge badge-default'>00:00:04:637</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>22:34:41</td>
+        <td>02:54:09</td>
         <td>
           Test passed
         </td>
@@ -122,7 +122,7 @@
           <div class="test-detail">
             <p class="name">testNavigateToHomePage</p>
             <p class="text-sm">
-              <span>22:34:41</span> / <span>00:00:10:683</span>
+              <span>02:54:09</span> / <span>00:00:06:457</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -131,9 +131,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testNavigateToHomePage</h5>
-<span class='badge badge-success'>12.10.2024 22:34:41</span>
-<span class='badge badge-danger'>12.10.2024 22:34:52</span>
-<span class='badge badge-default'>00:00:10:683</span>
+<span class='badge badge-success'>12.14.2024 02:54:09</span>
+<span class='badge badge-danger'>12.14.2024 02:54:16</span>
+<span class='badge badge-default'>00:00:06:457</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -146,7 +146,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>22:34:52</td>
+        <td>02:54:16</td>
         <td>
           Test passed
         </td>
@@ -163,7 +163,7 @@
           <div class="test-detail">
             <p class="name">testHamburgerToOpenSideMenu</p>
             <p class="text-sm">
-              <span>22:34:52</span> / <span>00:00:00:219</span>
+              <span>02:54:16</span> / <span>00:00:00:117</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -172,9 +172,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testHamburgerToOpenSideMenu</h5>
-<span class='badge badge-success'>12.10.2024 22:34:52</span>
-<span class='badge badge-danger'>12.10.2024 22:34:52</span>
-<span class='badge badge-default'>00:00:00:219</span>
+<span class='badge badge-success'>12.14.2024 02:54:16</span>
+<span class='badge badge-danger'>12.14.2024 02:54:16</span>
+<span class='badge badge-default'>00:00:00:117</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -187,7 +187,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>22:34:52</td>
+        <td>02:54:16</td>
         <td>
           Test passed
         </td>
@@ -204,7 +204,7 @@
           <div class="test-detail">
             <p class="name">testDragAndDropShift</p>
             <p class="text-sm">
-              <span>22:34:52</span> / <span>00:00:00:000</span>
+              <span>02:54:16</span> / <span>00:00:00:001</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -213,9 +213,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testDragAndDropShift</h5>
-<span class='badge badge-success'>12.10.2024 22:34:52</span>
-<span class='badge badge-danger'>12.10.2024 22:34:52</span>
-<span class='badge badge-default'>00:00:00:000</span>
+<span class='badge badge-success'>12.14.2024 02:54:16</span>
+<span class='badge badge-danger'>12.14.2024 02:54:16</span>
+<span class='badge badge-default'>00:00:00:001</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -228,7 +228,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>22:34:52</td>
+        <td>02:54:16</td>
         <td>
           Test passed
         </td>
@@ -245,7 +245,7 @@
           <div class="test-detail">
             <p class="name">testLoadOrganisation</p>
             <p class="text-sm">
-              <span>22:34:52</span> / <span>00:00:15:351</span>
+              <span>02:54:16</span> / <span>00:00:11:523</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -254,9 +254,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testLoadOrganisation</h5>
-<span class='badge badge-success'>12.10.2024 22:34:52</span>
-<span class='badge badge-danger'>12.10.2024 22:35:07</span>
-<span class='badge badge-default'>00:00:15:351</span>
+<span class='badge badge-success'>12.14.2024 02:54:16</span>
+<span class='badge badge-danger'>12.14.2024 02:54:27</span>
+<span class='badge badge-default'>00:00:11:523</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -269,7 +269,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>22:35:07</td>
+        <td>02:54:27</td>
         <td>
           Test passed
         </td>
@@ -286,7 +286,7 @@
           <div class="test-detail">
             <p class="name">verifyDayOfWeekMatchesTitle</p>
             <p class="text-sm">
-              <span>22:35:07</span> / <span>00:00:44:981</span>
+              <span>02:54:27</span> / <span>00:00:11:629</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -295,9 +295,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyDayOfWeekMatchesTitle</h5>
-<span class='badge badge-success'>12.10.2024 22:35:07</span>
-<span class='badge badge-danger'>12.10.2024 22:35:52</span>
-<span class='badge badge-default'>00:00:44:981</span>
+<span class='badge badge-success'>12.14.2024 02:54:27</span>
+<span class='badge badge-danger'>12.14.2024 02:54:39</span>
+<span class='badge badge-default'>00:00:11:629</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -310,7 +310,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>22:35:52</td>
+        <td>02:54:39</td>
         <td>
           Test passed
         </td>
@@ -334,13 +334,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 10, 2024 10:34:34 pm</h3>
+<h3>Dec 14, 2024 02:54:03 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 10, 2024 10:35:52 pm</h3>
+<h3>Dec 14, 2024 02:54:39 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -410,7 +410,7 @@
 </div></div>
 <script>
 var timeline = {
-"testAccountLogin":5.433,"testNavigateToHomePage":10.683,"testHamburgerToOpenSideMenu":0.219,"testDragAndDropShift":0,"testLoadOrganisation":15.351,"verifyDayOfWeekMatchesTitle":44.981
+"testAccountLogin":4.637,"testNavigateToHomePage":6.457,"testHamburgerToOpenSideMenu":0.117,"testDragAndDropShift":0.001,"testLoadOrganisation":11.523,"verifyDayOfWeekMatchesTitle":11.629
 };
 </script>
 <div class="row">
