--- a/test-output/index.html
+++ b/test-output/index.html
@@ -146,21 +146,6 @@
           <div class="suite-Command_line_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">dayForceTests.HomePageTests</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="testHamburgerToOpenSideMenu">
-                  </a> <!-- testHamburgerToOpenSideMenu -->
-                  <span class="method-name">testHamburgerToOpenSideMenu</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Command_line_suite-class-passed -->
-          <div class="suite-Command_line_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">dayForceTests.LoginPageTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -177,6 +162,21 @@
                   <a name="testNavigateToHomePage">
                   </a> <!-- testNavigateToHomePage -->
                   <span class="method-name">testNavigateToHomePage</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Command_line_suite-class-passed -->
+          <div class="suite-Command_line_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">dayForceTests.HomePageTests</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testHamburgerToOpenSideMenu">
+                  </a> <!-- testHamburgerToOpenSideMenu -->
+                  <span class="method-name">testHamburgerToOpenSideMenu</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -267,23 +267,23 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyDayOfWeekMatchesTitle')
 data.setCell(0, 2, 'dayForceTests.timeSchedulesAutomation.TimeScheduleTests')
-data.setCell(0, 3, 44940);
+data.setCell(0, 3, 11629);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testLoadOrganisation')
 data.setCell(1, 2, 'dayForceTests.timeSchedulesAutomation.TimeScheduleTests')
-data.setCell(1, 3, 15351);
+data.setCell(1, 3, 11521);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testNavigateToHomePage')
 data.setCell(2, 2, 'dayForceTests.LoginPageTests')
-data.setCell(2, 3, 10683);
+data.setCell(2, 3, 6457);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testAccountLogin')
 data.setCell(3, 2, 'dayForceTests.LoginPageTests')
-data.setCell(3, 3, 5425);
+data.setCell(3, 3, 4639);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'testHamburgerToOpenSideMenu')
 data.setCell(4, 2, 'dayForceTests.HomePageTests')
-data.setCell(4, 3, 219);
+data.setCell(4, 3, 117);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'testDragAndDropShift')
 data.setCell(5, 2, 'dayForceTests.timeSchedulesAutomation.TimeScheduleTests')
@@ -292,7 +292,7 @@ window.suiteTableData['Command_line_suite']= { tableData: data, tableDiv: 'times
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 34 seconds</span>
               <div id="times-div-Command_line_suite">
               </div> <!-- times-div-Command_line_suite -->
             </div> <!-- times-div -->
@@ -343,140 +343,140 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.LoginPageTests.testAccountLogin(java.lang.String,java.lang.String,java.lan...)</span>
-                <span class="method-start">4181 ms</span>
+                <span class="method-start">3393 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">setUpOnceForSuite</span>
-                <span class="method-start">4184 ms</span>
+                <span class="method-start">3401 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testAccountLogin(totallygroupconfig, Test, Dayforce@12)</span>
-                <span class="method-start">6115 ms</span>
+                <span class="method-start">5101 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">springTestContextAfterTestMethod(public void dayForceTests.LoginPageTests.testAccountLogin(java.lang.String,java.lang.String,java.lan...)</span>
-                <span class="method-start">11556 ms</span>
+                <span class="method-start">9744 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.LoginPageTests.testNavigateToHomePage())</span>
-                <span class="method-start">11560 ms</span>
+                <span class="method-start">9747 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">setUpOnceForSuite</span>
+                <span class="method-start">9750 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testNavigateToHomePage</span>
-                <span class="method-start">11561 ms</span>
+                <span class="method-start">9751 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">setUpOnceForSuite</span>
-                <span class="method-start">11561 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="configuration-method after">
                 <span class="method-name">springTestContextAfterTestMethod(public void dayForceTests.LoginPageTests.testNavigateToHomePage())</span>
-                <span class="method-start">22245 ms</span>
+                <span class="method-start">16209 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">springTestContextAfterTestClass</span>
-                <span class="method-start">22247 ms</span>
+                <span class="method-start">16210 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">dayForceTests.HomePageTests</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">springTestContextBeforeTestClass</span>
-                <span class="method-start">22255 ms</span>
+                <span class="method-start">16213 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">springTestContextPrepareTestInstance</span>
-                <span class="method-start">22257 ms</span>
+                <span class="method-start">16213 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.HomePageTests.testHamburgerToOpenSideMenu())</span>
-                <span class="method-start">22260 ms</span>
+                <span class="method-start">16215 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">setUpOnceForSuite</span>
-                <span class="method-start">22261 ms</span>
+                <span class="method-start">16215 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testHamburgerToOpenSideMenu</span>
-                <span class="method-start">22261 ms</span>
+                <span class="method-start">16215 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">springTestContextAfterTestMethod(public void dayForceTests.HomePageTests.testHamburgerToOpenSideMenu())</span>
-                <span class="method-start">22480 ms</span>
+                <span class="method-start">16333 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">springTestContextAfterTestClass</span>
-                <span class="method-start">22481 ms</span>
+                <span class="method-start">16333 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">dayForceTests.timeSchedulesAutomation.TimeScheduleTests</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">springTestContextBeforeTestClass</span>
-                <span class="method-start">22482 ms</span>
+                <span class="method-name">springTestContextPrepareTestInstance</span>
+                <span class="method-start">16334 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
-                <span class="method-name">springTestContextPrepareTestInstance</span>
-                <span class="method-start">22483 ms</span>
+                <span class="method-name">springTestContextBeforeTestClass</span>
+                <span class="method-start">16334 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
-                <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.testDragAndDropShift())</span>
-                <span class="method-start">22486 ms</span>
+                <span class="method-name">setUpOnceForSuite</span>
+                <span class="method-start">16336 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
-                <span class="method-name">setUpOnceForSuite</span>
-                <span class="method-start">22486 ms</span>
+                <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.testDragAndDropShift())</span>
+                <span class="method-start">16336 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testDragAndDropShift</span>
-                <span class="method-start">22487 ms</span>
+                <span class="method-start">16337 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">springTestContextAfterTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.testDragAndDropShift())</span>
-                <span class="method-start">22488 ms</span>
+                <span class="method-start">16338 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">testLoadOrganisation</span>
+                <span class="method-start">16339 ms</span>
+              </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.testLoadOrganisation() throws ja...)</span>
-                <span class="method-start">22491 ms</span>
+                <span class="method-start">16339 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">setUpOnceForSuite</span>
-                <span class="method-start">22492 ms</span>
+                <span class="method-start">16339 ms</span>
               </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">testLoadOrganisation</span>
-                <span class="method-start">22492 ms</span>
-              </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">springTestContextAfterTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.testLoadOrganisation() throws ja...)</span>
-                <span class="method-start">37844 ms</span>
+                <span class="method-start">27862 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.verifyDayOfWeekMatchesTitle())</span>
-                <span class="method-start">37845 ms</span>
+                <span class="method-start">27864 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">setUpOnceForSuite</span>
-                <span class="method-start">37845 ms</span>
+                <span class="method-start">27865 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyDayOfWeekMatchesTitle</span>
-                <span class="method-start">37846 ms</span>
+                <span class="method-start">27865 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">springTestContextAfterTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.verifyDayOfWeekMatchesTitle())</span>
-                <span class="method-start">82832 ms</span>
+                <span class="method-start">39494 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">springTestContextAfterTestClass</span>
-                <span class="method-start">82867 ms</span>
+                <span class="method-start">39495 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">dayForceTests.LoginPageTests</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDownAfterSuite</span>
-                <span class="method-start">83520 ms</span>
+                <span class="method-start">39878 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
