--- a/test-output/extent-report.html
+++ b/test-output/extent-report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 17, 2024 11:26:31 pm</span></a>
+<a href="#"><span class="badge badge-primary">Dec 22, 2024 02:46:17 am</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">testAccountLogin</p>
             <p class="text-sm">
-              <span>23:26:33</span> / <span>00:00:04:090</span>
+              <span>02:46:19</span> / <span>00:00:05:353</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testAccountLogin</h5>
-<span class='badge badge-success'>12.17.2024 23:26:33</span>
-<span class='badge badge-danger'>12.17.2024 23:26:37</span>
-<span class='badge badge-default'>00:00:04:090</span>
+<span class='badge badge-success'>12.22.2024 02:46:19</span>
+<span class='badge badge-danger'>12.22.2024 02:46:25</span>
+<span class='badge badge-default'>00:00:05:353</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>23:26:37</td>
+        <td>02:46:25</td>
         <td>
           Test passed
         </td>
@@ -122,7 +122,7 @@
           <div class="test-detail">
             <p class="name">testNavigateToHomePage</p>
             <p class="text-sm">
-              <span>23:26:37</span> / <span>00:00:07:754</span>
+              <span>02:46:25</span> / <span>00:00:06:380</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -131,9 +131,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testNavigateToHomePage</h5>
-<span class='badge badge-success'>12.17.2024 23:26:37</span>
-<span class='badge badge-danger'>12.17.2024 23:26:45</span>
-<span class='badge badge-default'>00:00:07:754</span>
+<span class='badge badge-success'>12.22.2024 02:46:25</span>
+<span class='badge badge-danger'>12.22.2024 02:46:31</span>
+<span class='badge badge-default'>00:00:06:380</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -146,7 +146,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>23:26:45</td>
+        <td>02:46:31</td>
         <td>
           Test passed
         </td>
@@ -163,7 +163,7 @@
           <div class="test-detail">
             <p class="name">testHamburgerToOpenSideMenu</p>
             <p class="text-sm">
-              <span>23:26:45</span> / <span>00:00:00:194</span>
+              <span>02:46:31</span> / <span>00:00:00:119</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -172,9 +172,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testHamburgerToOpenSideMenu</h5>
-<span class='badge badge-success'>12.17.2024 23:26:45</span>
-<span class='badge badge-danger'>12.17.2024 23:26:45</span>
-<span class='badge badge-default'>00:00:00:194</span>
+<span class='badge badge-success'>12.22.2024 02:46:31</span>
+<span class='badge badge-danger'>12.22.2024 02:46:31</span>
+<span class='badge badge-default'>00:00:00:119</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -187,7 +187,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>23:26:45</td>
+        <td>02:46:31</td>
         <td>
           Test passed
         </td>
@@ -204,7 +204,7 @@
           <div class="test-detail">
             <p class="name">testDragAndDropShift</p>
             <p class="text-sm">
-              <span>23:26:45</span> / <span>00:00:00:000</span>
+              <span>02:46:31</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -213,8 +213,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testDragAndDropShift</h5>
-<span class='badge badge-success'>12.17.2024 23:26:45</span>
-<span class='badge badge-danger'>12.17.2024 23:26:45</span>
+<span class='badge badge-success'>12.22.2024 02:46:31</span>
+<span class='badge badge-danger'>12.22.2024 02:46:31</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -228,7 +228,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>23:26:45</td>
+        <td>02:46:31</td>
         <td>
           Test passed
         </td>
@@ -245,7 +245,7 @@
           <div class="test-detail">
             <p class="name">testLoadOrganisation</p>
             <p class="text-sm">
-              <span>23:26:45</span> / <span>00:00:18:648</span>
+              <span>02:46:31</span> / <span>00:00:10:563</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -254,9 +254,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testLoadOrganisation</h5>
-<span class='badge badge-success'>12.17.2024 23:26:45</span>
-<span class='badge badge-danger'>12.17.2024 23:27:03</span>
-<span class='badge badge-default'>00:00:18:648</span>
+<span class='badge badge-success'>12.22.2024 02:46:31</span>
+<span class='badge badge-danger'>12.22.2024 02:46:42</span>
+<span class='badge badge-default'>00:00:10:563</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -269,7 +269,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>23:27:03</td>
+        <td>02:46:42</td>
         <td>
           Test passed
         </td>
@@ -286,7 +286,7 @@
           <div class="test-detail">
             <p class="name">verifyDayOfWeekMatchesTitle</p>
             <p class="text-sm">
-              <span>23:27:03</span> / <span>00:00:02:671</span>
+              <span>02:46:42</span> / <span>00:00:04:969</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -295,9 +295,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyDayOfWeekMatchesTitle</h5>
-<span class='badge badge-success'>12.17.2024 23:27:03</span>
-<span class='badge badge-danger'>12.17.2024 23:27:06</span>
-<span class='badge badge-default'>00:00:02:671</span>
+<span class='badge badge-success'>12.22.2024 02:46:42</span>
+<span class='badge badge-danger'>12.22.2024 02:46:47</span>
+<span class='badge badge-default'>00:00:04:969</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -310,7 +310,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>23:27:06</td>
+        <td>02:46:47</td>
         <td>
           Test passed
         </td>
@@ -334,13 +334,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 17, 2024 11:26:31 pm</h3>
+<h3>Dec 22, 2024 02:46:17 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 17, 2024 11:27:06 pm</h3>
+<h3>Dec 22, 2024 02:46:47 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -410,7 +410,7 @@
 </div></div>
 <script>
 var timeline = {
-"testAccountLogin":4.09,"testNavigateToHomePage":7.754,"testHamburgerToOpenSideMenu":0.194,"testDragAndDropShift":0,"testLoadOrganisation":18.648,"verifyDayOfWeekMatchesTitle":2.671
+"testAccountLogin":5.353,"testNavigateToHomePage":6.38,"testHamburgerToOpenSideMenu":0.119,"testDragAndDropShift":0,"testLoadOrganisation":10.563,"verifyDayOfWeekMatchesTitle":4.969
 };
 </script>
 <div class="row">
